Changelog
=========


1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2014-09-15)
------------------

- BugFix: Do not break if username (loginname) is passed as userid.
  Like plone.app.discussion does until 2.3.2
  [mathias.leimgruber]


1.0.2 (2014-05-03)
------------------

- Fix _imagingft check to support Pillow >= 2.1.0, where imports have changed.
  [jone]


1.0.1 (2014-02-07)
------------------

- Do not try to generate the image if _imagingft is not installed.
  Log an error instead.
  [Julian Infanger]


1.0.0 (2014-02-06)
------------------

- Initial implementation.
  [jone]