@@ -5,7 +5,8 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix userid lookup when user does not exist.
+  [jone]
 
 
 1.0.3 (2014-09-15)
